--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
 
 <body>
 	<div class="wrapper">
-	
-	</div>
 
+
+		<div class="info">
+			<h1>Magic 8 Ball</h1>
+			<p>Zadaj pytanie, kliknij bilę i poznaj prawdę!</p>
+		</div>
+		<div class="ball-img">
+			<img src="https://cdn.pixabay.com/photo/2012/04/16/11/05/ball-35516_960_720.png" alt="ball nr 8">
+		</div>
+		<div class="question-area">
+			<h2>Zadaj pytanie:</h2>
+			<input type="text">
+			<p class="answer"></p>
+			<p class="error"></p>
+		</div>
+
+	</div>
 
 	<script src="/js.js"></script>
 </body>
